Bug 120794 - CRASH while selecting a drawing line
Summary: CRASH while selecting a drawing line
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
: 120816 120818 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-10-22 14:23 UTC by Xisco Faulí
Modified: 2018-10-23 09:39 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
screencast (865.60 KB, video/mp4)
2018-10-22 14:24 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-10-22 14:23:41 UTC
Steps to reproduce:
1. Open writer
2. Display the drawing toolbar ( View - Toolbars - Drawing )
3. Insert a line in the document
4. Select it with the Select icon
5. Click anywhere in the document
-> Crash!

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: 5fb66ae5595b7435e8954df31473fad15a74b8c2
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 1 Xisco Faulí 2018-10-22 14:24:30 UTC
Created attachment 145908 [details]
screencast
Comment 2 Xisco Faulí 2018-10-22 14:25:55 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=b4fc996520b47a6212661a9de3a1c72ccfc379a4

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-09-21 15:30:02 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-09-25 13:57:36 +0200
commit b4fc996520b47a6212661a9de3a1c72ccfc379a4 (patch)
tree 2dcb66d687dcdd1d91a75f9e498ca04742a7c564
parent c30bdfbd22807e3f0c77f13a246ec243153ad7ae (diff)
loplugin:useuniqueptr in SdrHdlList

Bisected with: bibisect-linux64-6.2

Adding Cc: to Noel Grandin
Comment 3 Julien Nabet 2018-10-22 19:06:51 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this.

I tried to select the same way you did but don't reproduce too the form which appears when selecting or the mouse icon which became a cross.
Comment 4 Xisco Faulí 2018-10-22 23:56:31 UTC
I can still reproduce it in

Version: 6.2.0.0.alpha1+
Build ID: 7da3947535d1b3aac23b3d0a72e94396960ee751
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

using 'rm -rf instdir/user/ && instdir/program/swriter'
Comment 5 Xisco Faulí 2018-10-23 08:45:07 UTC
*** Bug 120816 has been marked as a duplicate of this bug. ***
Comment 6 Xisco Faulí 2018-10-23 08:50:25 UTC
Another way to reproduce it:
1. Draw a line
2. Select it
3. Move one of the green dots
4. Click on the document
Comment 7 Xisco Faulí 2018-10-23 08:59:40 UTC
*** Bug 120818 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2018-10-23 09:07:09 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd6dd8c6f3562cbccbc971b916c6a8933840ffeb

tdf#120794 crash while selecting a drawing line

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2018-10-23 09:39:13 UTC
Verified in

Version: 6.2.0.0.alpha1+
Build ID: cd6dd8c6f3562cbccbc971b916c6a8933840ffeb
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Noel Grandin, Thanks for fixing this!!