tdf#120794 crash while selecting a drawing line

regression from
    commit b4fc996520b47a6212661a9de3a1c72ccfc379a4
    loplugin:useuniqueptr in SdrHdlList

Change-Id: Ic49c60020b1d86b4c65cc4662393415b96af714e